# rfc2cn

./: .env.example  .gitignore  DBEAVER_GUIDE.md  DEPLOYMENT_SUCCESS.md  DOCKER.md  FUNCTION_VERIFICATION.md  PAGINATION_IMPROVEMENTS.md  QUICKSTART.md  QUICK_FIX.md  README.md  TAG_REMOVAL_SUMMARY.md  TAG_UPDATE.md  build-image.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  info.txt  server-deploy.sh  test-api.html  test-features.md  test-navigation.html  test_auto_tag.sh  test_multi_tag_search.sh  test_tags.sh  translate.sh
backend/: .dockerignore  .env.example  Cargo.toml  DATABASE_FIX.md  Dockerfile  Dockerfile.prod  create_all_tables.sql  monitor_translation.sh  start.sh
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/handlers/: health.rs  mod.rs  rfc.rs  translation.rs
backend/src/models/: mod.rs  rfc.rs  translation.rs
backend/src/services/: ai.rs  mod.rs  rfc.rs  translation.rs
frontend/: .dockerignore  Dockerfile  next.config.js  package.json  pnpm-lock.yaml
frontend/src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/about/: page.tsx
frontend/src/app/rfc/[number]/: page.tsx
frontend/src/app/rfcs/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: pagination.tsx  rfc-content.tsx  rfc-list-client.tsx  search-box.tsx  theme-toggle.tsx
frontend/src/components/layout/: footer.tsx  header.tsx
frontend/src/lib/: api.ts
