[package]
name = "rfc2cn-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rfc2cn-server"
path = "src/main.rs"

[[bin]]
name = "rfc-cli"
path = "src/bin/cli.rs"

[dependencies]
# Web框架
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP客户端（使用rustls避免OpenSSL依赖）
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# 环境变量
dotenvy = "0.15"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# 进度条
indicatif = "0.17"

# 正则表达式
regex = "1.10"

[dev-dependencies]
# 测试
tokio-test = "0.4"
